<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:title="@string/home_nav" />

    <item
        android:id="@+id/action_courses"
        android:icon="@drawable/courses"
        android:title="@string/courses_nav" />

    <item
        android:id="@+id/action_task"
        android:icon="@drawable/progress"
        android:title="@string/progress_nav" />

    <item
        android:id="@+id/action_challenge"
        android:icon="@drawable/leaderboard"
        android:title="@string/challenge_nav" />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile_nav" />
</menu>
