<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/android_background"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_background"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/iv_background"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/details_image_gradient"
            app:layout_constraintRight_toRightOf="@+id/iv_background"
            app:layout_constraintLeft_toLeftOf="@+id/iv_background"
            app:layout_constraintBottom_toBottomOf="@+id/iv_background"
            app:layout_constraintTop_toTopOf="@+id/frameLayout"
            android:layout_marginTop="8dp" />

        <View
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="423dp"
            android:layout_marginBottom="80dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/white_corners"
            android:transitionName="@string/transition_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_background"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

        <FrameLayout
            android:transitionName="@string/transition_avatar_border"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/avatar_border_details"
            android:layout_centerVertical="true"
            android:id="@+id/frameLayout"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/card"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="@+id/card"
            app:layout_constraintTop_toTopOf="@+id/card"
            app:layout_constraintBottom_toTopOf="@+id/card"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/details_avatar_border"
                android:background="@drawable/android_icon"
                android:scaleType="centerCrop"
                android:layout_gravity="center"/>

        </FrameLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/header_title_text_size"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            app:layout_constraintRight_toRightOf="@+id/card"
            app:layout_constraintLeft_toLeftOf="@+id/card"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/details_lists_corners_bottom"
            android:textSize="@dimen/header_footer_text_size"
            android:ellipsize="end"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintRight_toRightOf="@+id/card"
            app:layout_constraintLeft_toLeftOf="@+id/card"
            app:layout_constraintBottom_toBottomOf="@+id/card"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout2"
            android:clickable="true"
            android:onClick="onCloseClick"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_description"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/tv_description"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/card">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/cancel"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/details_close"
                android:textColor="@color/colorPrimaryDark"
                android:alpha="0.5" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</layout>